# GIFT-Grab

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  REMOVE-ME-AFTER-7  conanfile.txt  deprecated_CMakeLists.txt  project_meta_info.in  tox.ini
ci/: build-linux.sh  build-uzl1603-i420.sh  build-uzl1603.sh  build.tox.ini  deploy-linux.sh  pip.tox.ini  test-real-time.sh  test-uzl1603-i420.sh  test-uzl1603.sh  utils.sh
doc/: Doxyfile  Doxyfile.in  Makefile  build.md  doxygen-index.md  issues.md  make.bat  minimal.md  py-api.md  pypi.md  tips.md  (+1 more)
giftgrab/: CMakeLists.txt
giftgrab/include/giftgrab/: codec.h  iobserver.h  ivideosource.h  videosourcefactory.h
giftgrab/src/: broadcastdaemon.cpp  except.cpp  iobservable.cpp  maskframe.cpp  videoframe.cpp  videosourcefactory.cpp  videotargetfactory.cpp
legacy/blackmagicsdk/: CMakeLists.txt  blackmagic_frame_grabber.h
legacy/epiphansdkutils/: CMakeLists.txt  frmgrab.cpp
legacy/epiphansdkutils/app/: finddevice.cpp  framerate.cpp
legacy/epiphansdkutils/cmake/: dvi2pcieduo_defs.h.in
legacy/epiphansdkutils/include/: sdk_utils.h
legacy/epiphansdkutils/src/: sdk_utils.cpp
legacy/vlc/: CMakeLists.txt  vlc_video_source.h
src/: CMakeLists.txt  MANIFEST.in  giftgrab_configurator.py  setup.py
src/api/: broadcastdaemon.cpp  broadcastdaemon.h  codec.h  device.h  except.cpp  except.h  exports.h  factory.cpp  factory.h  iobservable.cpp  iobservable.h  iobserver.h  ivideosource.h  ivideotarget.h  maskframe.cpp  maskframe.h  videoframe.cpp  videoframe.h  videoframe_i420.cpp  videoframe_i420.h  videosourcefactory.cpp  videosourcefactory.h  videotargetfactory.cpp  videotargetfactory.h
src/blackmagic/: blackmagic_frame_grabber.h
src/blackmagicsdk/: blackmagic_frame_grabber.cpp  blackmagicsdk_video_source.cpp  blackmagicsdk_video_source.h  deck_link_bgra_video_frame.cpp  deck_link_bgra_video_frame.h  deck_link_display_mode_detector.cpp  deck_link_display_mode_detector.h
src/cmake/: FindFFmpeg.cmake  GiftGrabConfig.cmake
src/cmake/blackmagicsdk/: CMakeLists.txt
src/cmake/boost.python/: CMakeLists.txt  FindBoost.cmake
src/cmake/cpp11/: CMakeLists.txt
src/cmake/epiphansdk/: CMakeLists.txt
src/cmake/ffmpeg/: CMakeLists.txt  FindFFmpeg.cmake
src/cmake/libvlc/: CMakeLists.txt
src/cmake/opencv/: CMakeLists.txt
src/cmake/platform/: CMakeLists.txt
src/cmake/pythonlibs/: CMakeLists.txt
src/epiphansdk/: CMakeLists.txt  argb_to_bgra_converter.cpp  argb_to_bgra_converter.h  epiphansdk_video_source.cpp  epiphansdk_video_source.h  rgb_to_bgra_converter.cpp  rgb_to_bgra_converter.h
src/ffmpeg/: ffmpeg_utils.cpp  ffmpeg_utils.h  ffmpeg_video_source.cpp  ffmpeg_video_source.h  ffmpeg_video_target.cpp  ffmpeg_video_target.h
src/offline/: opencv_video_source.cpp  opencv_video_source.h
src/opencv/: opencv_video_source.cpp  opencv_video_source.h  opencv_video_target.cpp  opencv_video_target.h
src/pip/: long_description.rst
src/python/: gil.h  wrapper.cpp
src/python/modules/: __init__.py  epiphan.py  example_epiphan.py
src/python/modules/example_epiphan/: dvi-i420.yml  dvi.yml  sdi-i420.yml  sdi.yml
src/python/modules/giftgrab/: epiphan.py
src/python/modules/giftgrab/utils/: __init__.py  inspection.py
src/sandbox/: CMakeLists.txt
src/sandbox/frame-level-metadata/: CMakeLists.txt  example.cpp
src/tests/: CMakeLists.txt  __init__.py  compare_saved_frames.py  epiphan_thread.py  include_catch.h  run-tests.sh  save_1min_colour_chessboard.cpp  save_1min_epiphan.cpp  save_1min_epiphan_dvi_xvid.cpp  save_frames.cpp  save_frames.py  save_frames_mt.py  save_from_file.cpp  utils.py
src/tests/blackmagic/: CMakeLists.txt  conftest.py  stereo_capture.py  test_observer.py  test_stereo.py  test_unit.py  test_video_source_factory.cpp
src/tests/blackmagic/decklink4kextreme12g/: bm3d.py  bm3d.sh  run-bm3d.sh
src/tests/blackmagic/decklinksdi4k/: CMakeLists.txt  conftest.py  test_observer.py  test_unit.py  test_video_source_factory.cpp
src/tests/epiphan/: conftest.py  dvi2pcieduo.cpp  dvi2pcieduo.py
src/tests/epiphan/config/: unparseable.yml  valueerror1.yml  valueerror2.yml  yamlerror.yml
src/tests/epiphan/dvi2pcieduo/: CMakeLists.txt  conftest.py  convert_n_binaries_to_images.py  io_utils.cpp  io_utils.h  save_n_dummies.cpp  save_n_frames_to_binary.cpp  save_n_frames_to_images.cpp  save_n_frames_to_images.py  test.py  test_epiphan_py_module.py  test_frame_rate.cpp  test_observer.py  test_realtime.py  test_unit.py  test_video_source_factory.cpp  test_video_source_factory.py
src/tests/epiphan/dvi2pcieduo/config/: valueerror2.yml  valueerror3.yml
src/tests/epiphan/dvi2pcieduo/data/: dvi-i420.yml  dvi.yml  oserror.yml  sdi.yml  unparseable.yml  valueerror1.yml  valueerror2.yml  yamlerror.yml
src/tests/files/: CMakeLists.txt  conftest.py  test_observer.py  test_unit.py  test_video_source_factory.cpp
src/tests/files/data/: video_15frames_30fps.avi  video_15frames_30fps.webm
src/tests/h265/: CMakeLists.txt
src/tests/network/: CMakeLists.txt  conftest.py  test_observer.py  test_unit.py  test_video_source_factory.cpp
src/tests/network-targets/: CMakeLists.txt  test_network_targets.py
src/tests/or/: config.py  dvi.yml  epiphan.py  epiphan_config.py  example.py  from.yml  or_recording.py  or_thread.py  sdi.yml  test_config.py  test_epiphan.py
src/tests/or/config/: dvi.yml  oserror.yml  sdi.yml  unparseable.yml  valueerror.yml  valueerror1.yml  yamlerror.yml
src/tests/pipeline/: CMakeLists.txt  check_multithreading_reliability.sh  complex_pipeline.py  conftest.py  multithreading_reliability_check.py  run-complex-pipeline.sh  test_observer.py
src/tests/rgbswap/: CMakeLists.txt  profile_argb_to_bgra.cpp  profile_rgb_to_bgra.cpp
src/tests/utils/: __init__.py  inspection.py
src/tests/videoframe/: CMakeLists.txt  conftest.py  test_numpy_compatibility.py  test_stereo.py
src/tests/videosourcefactory/: CMakeLists.txt  leak_checker.cpp  repeat-leak-checker.sh
src/tests/xvid/: CMakeLists.txt
src/utils/: macros.h
src/vlc/: vlc_video_source.cpp  vlc_video_source.h
(+14 files in other folders)
